--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,12 @@
 /* Your CSS Code here. */
 table,th,tr,td{
 	border:1px solid black;
+	width:600px;
+	height:50px;
+	border-collapse: collapse;
 }
 th , td{
-color :  blue;
+color :  black;
+	text-align : center;
+	background-color: red
 }
